=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=head2 v1.027 - Under Development

=over

=item *

Added L<Krang::Publisher>->publish_context() - a means of storing
arguments during the publish of a given story. [Peter]

=item *

Added storage of sort order and sort by to session cache in 
L<Krang::HTMLPager>. [Matt]

=item *

Bugfix in L<Krang::Schedule> - alerts were not being run because 
of some incomplete code meant to check for valid alert id. [Matt]

=item * 

Made changes in media UI to:

1. add 'publish to preview' button and underlying functionality
2. cause 'publish' button in edit screen to also preview the media
3. remove the 'reset' button.
4. have the 'Publish' button appear on the new media screen, no need to 
have to click save first. [Matt]

=item *

Small bugfix to the Solaris C<Platform.pm> [Joseph Sacco]

=item *

C<bin/krang_upgrade> now supports remote MySQL databases.  [Aaron
Ross]

=item *

Bugfix for C<bin/krang_publish>, now correctly counts media total
and time with --to-preview option. [Matt]

=item *

Added C<bin/krang_expunge> - designed to work in conjunction with
C<bin/krang_extract_subset>, it deletes a site from a multi-site Krang
instance, and ensures that no dependencies are left hanging. [Peter]

=item *

Minor bugfix in C<bin/krang_extract_subset> - proper handling of
StoryLink/MediaLink elements that do not point to anything.

=back


=head2 v1.026 - November 4, 2004

=over

=item *

Re-generated templates.kds for the Default and Tutorial element
libraries, making them architecture-independent (see nfreeze note
below).  [Peter]

=item *

Krang now uses C<Storable::nfreeze> rather than C<Storable::freeze>
when saving binary and object data.  The move to C<nfreeze> should
make .kds files architecture-independent, allowing migrations between
different platforms (e.g. x86 / SPARC / PPC).  [Peter]

=item *

Updated L<Storable> to the current release, version 2.13.  [Peter]

=item *
